Add NPM require support (I hope?)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@twilburn/conspiracy",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "src/index.js",
+  "type": "module",
+  "exports": {
+    "import": "src/index.js",
+    "require": "dist/conspiracy.js"
+  },
   "scripts": {
     "build": "rollup --config"
   },
