Okay it works now

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@twilburn/conspiracy",
-  "version": "1.0.2",
-  "main": "src/index.js",
+  "version": "1.0.5",
+  "main": "./src/index.js",
   "type": "module",
   "exports": {
-    "import": "src/index.js",
-    "require": "dist/conspiracy.js"
+    "import": "./src/index.js",
+    "require": "./dist/conspiracy.cjs"
   },
   "scripts": {
     "build": "rollup --config"
